# py_web_module_10_django2

./: .gitignore  README.md  pyproject.toml
notes/noteapp/: forms.py  urls.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
notes/noteapp/templates/noteapp/: index.html
notes/notes/: .my_pgpass  .pg_service.conf  settings.py  urls.py
notes/users/: urls.py  views.py
notes/users/migrations/: 0001_initial.py
